// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockcode component with language 1`] = `
<div
  className="jsx-2749244367 blockcode"
  data-testid="Blockcode"
>
  <div
    className="jsx-2749244367 language"
  >
    test
  </div>
  <pre
    className="jsx-1898440872 jsx-2149608739 hljs"
    data-testid="Pre"
  >
    <code
      className="jsx-4275953942 code"
      data-testid="Code"
    >
      <span
        className="hljs-attribute"
        style={Object {}}
      >
        blockcode
      </span>
    </code>
  </pre>
</div>
`;

exports[`Blockcode components that do not have a language 1`] = `
<div
  className="jsx-902339241 blockcode"
  data-testid="Blockcode"
>
  <pre
    className="jsx-1898440872 jsx-2149608739 hljs"
    data-testid="Pre"
  >
    <code
      className="jsx-4275953942 code"
      data-testid="Code"
    >
      blockcode
    </code>
  </pre>
</div>
`;
